# klqzbot

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml
src/klqzbot/: config.py  main.py  mirror.py  models.py  telegram_utils.py
