[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klqzbot"
version = "0.1.0"
description = "Telegram message mirror tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-dotenv>=1.0.1",
  "telethon>=1.36.0"
]

[project.scripts]
klqzbot = "klqzbot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
